--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.2.0",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.9.5",
+    "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
